# simple-sentencepiece

./: CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build-wheels.yml  linux-macos.yaml
cmake/: pybind11.cmake
example/: CMakeLists.txt  README.md  README_zh.md  demo.cc
ssentencepiece/csrc/: CMakeLists.txt  byte_utils.h  ssentencepiece.cc  ssentencepiece.h  ssentencepiece_test.cc  threadpool.h
ssentencepiece/python/csrc/: ssentencepiece.cc
ssentencepiece/python/ssentencepiece/: __init__.py  byte_utils.py  cli.py  ssentencepiece.py
ssentencepiece/python/ssentencepiece/resources/: alphabet-30.vocab  alphabet-32.vocab  alphabet-33.vocab  alphabet-58.vocab  chn_jpn_yue_eng_ko_spectok.bpe.vocab  gigaspeech-2000.vocab  gigaspeech-500.vocab  gigaspeech-5000.vocab  librispeech-500.vocab  librispeech-5000.vocab  zh-en-10381.vocab  zh-en-13361.vocab  zh-en-3876.vocab  zh-en-4258.vocab  zh-en-5776.vocab  zh-en-6876.vocab  zh-en-7258.vocab  zh-en-8481.vocab  zh-en-8756.vocab  zh-en-8776.vocab  zh-en-8863.vocab  zh-en-yue-11641.vocab  zh-en-yue-11661.vocab  zh-en-yue-14641.vocab  zh-en-yue-9761.vocab
ssentencepiece/python/tests/: CMakeLists.txt  test_ssentencepiece.py
ssentencepiece/python/tests/testdata/: bbpe2.model  bbpe2.vocab
